# duckle

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile.web  README.md  docker-compose.web.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-web.yml  pages.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: app_settings.rs  engine_manager.rs  lib.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs
crates/duckdb-engine/: Cargo.toml  build.rs
crates/duckdb-engine/src/: connectors.rs  context.rs  lib.rs  lineage.rs  plan.rs  tls.rs  util.rs
crates/duckdb-engine/src/plan/: builders.rs  graph.rs  mod.rs  specs.rs  tests.rs
crates/duckdb-engine/tests/: execution.rs
crates/duckle-mcp/: catalog.json
crates/duckle-mcp/src/: tools.rs
crates/duckle-runner/: Cargo.toml
crates/duckle-runner/src/: build.rs  context.rs  main.rs  selfextract.rs  serve.rs
crates/execution-core/: Cargo.toml
crates/execution-core/src/: lib.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/scheduler/tests/: firing.rs
crates/slothdb-engine/: Cargo.toml
crates/slothdb-engine/src/: lib.rs
crates/stream-engine/: Cargo.toml
crates/stream-engine/src/: lib.rs
crates/transform-engine/: Cargo.toml
crates/transform-engine/src/: lib.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: lib.rs
docs/: roadmap.md
docs/02_workflows/: 13_dolt-sync-pipeline-runbook.md
docs/03_runtime/: 00_runtime-overview.md  01_execution-model.md  02_planner-and-stage-compilation.md  03_duckdb-cli-and-sql-batching.md  04_runtime-specs.md  05_state-watermarks-and-history.md  06_files-artifacts-and-workspaces.md  07_logs-errors-and-debugging.md  08_external-dependencies.md
docs/current/: scheduler.md
docs/dolt_scripts/: export_tables_to_stage.sh  parse_export_plan.sql  parse_export_result.sql  parse_sync_result.sh  plan_exports.sh  publish_and_export_state.sh  repo_config.sql  sync_repo.sh  validate_exports.sql
frontend/: package-lock.json  package.json
frontend/scripts/: gen-brand-icons.mjs
frontend/src/: App.tsx  repo-types.ts  run-resolve.ts  styles.css  tauri-bridge.ts  validation.ts  workspace.ts
frontend/src/canvas/: Canvas.tsx
frontend/src/dives/: DashboardModal.tsx  dashboard-types.ts
frontend/src/workflow-ui/: BuildPipelineModal.tsx  EngineSelector.tsx  LeftSidebar.tsx  Palette.tsx  ProjectTree.tsx  PropertiesPanel.tsx  SettingsModal.tsx  brand-icons.generated.ts  palette-data.ts
frontend/src/workflow-ui/fields/: component-manifests.ts  manifest-synth.ts
scripts/: render_icon.py
website/: index.html  learn.html  site.webmanifest  use-cases.html
website/assets/css/: learn.css  site.css
website/assets/js/: catalog.data.js  learn.js  site.js
website/docs/: ai-duckie.html  automation.html  components.html  getting-started.html  index.html  integrations.html  learn.html
