[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/runtime",
    "crates/connectors",
    "crates/workflow-engine",
    "crates/transform-engine",
    "crates/stream-engine",
    "crates/duckdb-engine",
    "crates/duckle-runner",
    "crates/duckle-mcp",
    "crates/slothdb-engine",
    "crates/execution-core",
    "crates/plugin-sdk",
    "crates/metadata",
    "crates/scheduler",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sourav Roy"]
repository = "https://github.com/ducklelabs/duckle"
homepage = "https://github.com/ducklelabs/duckle"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
duckle-runtime = { path = "crates/runtime", version = "0.0.1" }
duckle-connectors = { path = "crates/connectors", version = "0.0.1" }
duckle-workflow-engine = { path = "crates/workflow-engine", version = "0.0.1" }
duckle-transform-engine = { path = "crates/transform-engine", version = "0.0.1" }
duckle-stream-engine = { path = "crates/stream-engine", version = "0.0.1" }
duckle-duckdb-engine = { path = "crates/duckdb-engine", version = "0.0.1" }
duckle-slothdb-engine = { path = "crates/slothdb-engine", version = "0.0.1" }
duckle-execution-core = { path = "crates/execution-core", version = "0.0.1" }
duckle-plugin-sdk = { path = "crates/plugin-sdk", version = "0.0.1" }
duckle-metadata = { path = "crates/metadata", version = "0.0.1" }
duckle-scheduler = { path = "crates/scheduler", version = "0.0.1" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Common
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Arrow / columnar
arrow = "53"
arrow-array = "59"
arrow-schema = "59"
parquet = "59"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
duckdb = "1.1"
encoding_rs = "0.8"

# Scheduling
cron = "0.17"

# Tauri (used by apps/desktop)
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"

# Faster release builds for dev iteration on the desktop app.
[profile.release-fast]
inherits = "release"
codegen-units = 16
lto = "thin"
strip = "none"

# Size-optimized profile for the duckle-runner stub. The runner is embedded
# into the desktop binary via include_bytes! and copied into every built
# artifact, so its size matters directly. Measured: opt-level "z" =
# 16,958,976 bytes vs "s" = 19,958,784 bytes vs the default release build's
# 27,922,944 bytes; "z" is smaller, so keep "z".
[profile.release-runner]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
