[package]
name = "duckle-desktop"
description = "Duckle Tauri 2 desktop shell."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "duckle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "duckle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Clipboard (Copy SQL / copy node id) and external-URL opening (CI
# build links, GitHub/GitLab token pages). The browser navigator.clipboard
# and window.open / <a target=_blank> no-op inside the Tauri webview, so
# these plugins are the only reliable cross-platform path.
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# Parse the GitHub release asset's RFC3339 upload time + format the embedded
# build time for the update-available check (update_check.rs).
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
duckle-runtime = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
duckle-connectors = { workspace = true }
duckle-duckdb-engine = { workspace = true }
duckle-scheduler = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2"
# tar + gzip for the llama.cpp archives on Linux/macOS - they ship
# as .tar.gz where Windows ships as .zip.
tar = "0.4"
flate2 = "1"
# Used by the AI chat assistant to talk to the local llama-server
# subprocess over HTTP. Same blocking client we use in the engine
# crate; reading the SSE stream via BufReader<impl Read>.
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# Staging the embedded duckle-runner stub to a temp file at build time
# (build_pipeline_bundle), so this is a runtime dep, not just a dev one.
tempfile = "3.10"

[features]
# Required for release builds. Without this feature, tauri-codegen
# generates an asset resolver that points at devUrl
# (http://localhost:5173), so the WebView shows ERR_CONNECTION_REFUSED.
# `tauri build` sets this automatically; raw `cargo build --release`
# does not, so the release workflow must pass `--features custom-protocol`.
custom-protocol = ["tauri/custom-protocol"]
