[package]
name = "duckle-duckdb-engine"
description = "DuckDB-backed execution engine for Duckle pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
# Blocking HTTP client for SaaS connectors (snk.webhook, snk.rest,
# src.rest, vector-DB HTTP APIs). ureq is ~20kb with minimal deps
# vs ~100kb for reqwest + tokio, and it matches the per-stage CLI
# shell-out model we already use (one synchronous round-trip).
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# Snowflake JWT RS256 auth path. Reads a PEM-encoded private key,
# derives the public-key fingerprint, and signs the standard
# Snowflake claims (iss / sub / iat / exp). PAT bearer auth is also
# supported and doesn't pull these in.
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"
# MongoDB. The official driver is async-only; we use a minimal tokio
# rt feature and call .block_on() from the synchronous executor.
# Significant dep cost (~5MB, 30s of compile time) but the only path
# to genuine self-hosted Mongo support short of hand-writing the
# BSON wire protocol.
mongodb = { version = "3" }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
# SQL Server + Synapse via the pure-Rust TDS driver. Async; wrapped
# in tokio block_on like mongo. compat feature adapts a tokio
# TcpStream to the AsyncRead/Write that tiberius wants.
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
# Cassandra / ScyllaDB via the pure-Rust scylla driver (also speaks
# CQL to Cassandra). Async; same block_on pattern as mongo + sqlserver.
scylla = "0.13"
# Oracle support. The `oracle` crate uses ODPI-C (statically compiled
# from C source at build time) which dynamically loads Oracle Instant
# Client at RUNTIME via dlopen. Build is self-contained on every OS;
# users just need Oracle Instant Client (libclntsh.{so,dll,dylib}) on
# the library path when they actually connect. Default-on so the
# shipped binary supports Oracle out of the box.
oracle = { version = "0.6", optional = true }
# Redis sync client. Tokio-async is optional and off; we use the blocking
# Connection / Pipeline API to fit the per-stage CLI shell-out model.
# Small dep (~300kb).
redis = { version = "0.27", default-features = false }

[features]
default = ["oracle"]
oracle = ["dep:oracle"]

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
