[package]
name = "duckle-duckdb-engine"
description = "DuckDB-backed execution engine for Duckle pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
# Blocking HTTP client for SaaS connectors (snk.webhook, snk.rest,
# src.rest, vector-DB HTTP APIs). ureq is ~20kb with minimal deps
# vs ~100kb for reqwest + tokio, and it matches the per-stage CLI
# shell-out model we already use (one synchronous round-trip).
ureq = { version = "2.10", default-features = false, features = ["tls", "json"] }
# Snowflake JWT RS256 auth path. Reads a PEM-encoded private key,
# derives the public-key fingerprint, and signs the standard
# Snowflake claims (iss / sub / iat / exp). PAT bearer auth is also
# supported and doesn't pull these in.
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
# HMAC-SHA256 for AWS SigV4 signing in src.dynamodb (and any future
# AWS services we add via direct HTTP). Avoids the aws-sdk-rust
# dep tree (300+ services we don't need).
hmac = "0.12"
base64 = "0.22"
# MongoDB. The official driver is async-only; we use a minimal tokio
# rt feature and call .block_on() from the synchronous executor.
# Significant dep cost (~5MB, 30s of compile time) but the only path
# to genuine self-hosted Mongo support short of hand-writing the
# BSON wire protocol.
mongodb = { version = "3" }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
# SQL Server + Synapse via the pure-Rust TDS driver. Async; wrapped
# in tokio block_on like mongo. compat feature adapts a tokio
# TcpStream to the AsyncRead/Write that tiberius wants.
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
# Cassandra / ScyllaDB via the pure-Rust scylla driver (also speaks
# CQL to Cassandra). Async; same block_on pattern as mongo + sqlserver.
scylla = "0.13"
# Oracle support. The `oracle` crate uses ODPI-C (statically compiled
# from C source at build time) which dynamically loads Oracle Instant
# Client at RUNTIME via dlopen. Build is self-contained on every OS;
# users just need Oracle Instant Client (libclntsh.{so,dll,dylib}) on
# the library path when they actually connect. Default-on so the
# shipped binary supports Oracle out of the box.
oracle = { version = "0.6", optional = true }
# Redis sync client. Tokio-async is optional and off; we use the blocking
# Connection / Pipeline API to fit the per-stage CLI shell-out model.
# Small dep (~300kb).
redis = { version = "0.27", default-features = false }
# YAML and TOML format readers/writers. Small pure-Rust deps. Used by
# src.yaml / snk.yaml / src.toml / snk.toml - we parse to serde_json::Value
# then either materialize as a DuckDB JSON table or write the JSON back
# out as YAML/TOML. Avoids needing DuckDB extensions for either format.
serde_yaml = "0.9"
toml = "0.8"
# Kafka (and Redpanda) producer + consumer via the pure-Rust rskafka
# crate (InfluxDB IOx in production). Async-only - wrapped in tokio
# block_on like mongo + tiberius + scylla. Avoids the C-lib rdkafka
# build dance entirely, at the cost of fewer broker-protocol features
# (good enough for batch produce + batch consume, no admin client).
rskafka = "0.5"
# Apache Avro container-file reader/writer. Pure Rust. Pairs with
# Kafka topics that publish Avro-encoded payloads, and reads the
# .avro / .ocf files that exporters drop on object storage.
apache-avro = "0.17"
# NATS / JetStream. Pure-Rust client by the NATS team.
async-nats = "0.37"
# XML reader/writer. Used by src.xml (walks a row path, emits each
# match as a JSON object) and snk.xml (wraps rows in row elements).
# Pure Rust.
quick-xml = "0.36"
# RabbitMQ / AMQP 0.9.1 client. Pure Rust, async. Same block_on
# pattern as Kafka/NATS. Publishes to an exchange + routing key;
# pulls from a queue with a per-message timeout for batch ETL.
lapin = { version = "2", default-features = false, features = ["rustls"] }
# FTP / FTPS client. Pure Rust, synchronous API (fits the per-stage
# blocking model - no block_on dance). Rustls-backed TLS keeps the
# build self-contained on every OS. SFTP (SSH-based, different
# protocol) is on the roadmap; russh pulls in aws-lc-sys which
# requires NASM at build time, breaking the self-contained build.
suppaftp = { version = "8", default-features = false, features = ["rustls-ring"] }
# System clipboard reader (src.clipboard). Text-only - image-data is
# off because we never round-trip images through pipelines. arboard
# is pure-Rust on Windows and macOS; on Linux it talks to X11/Wayland
# at runtime (gracefully fails with a clear engine error when there's
# no display, e.g. on a headless CI runner).
arboard = { version = "3", default-features = false }
# WebAssembly interpreter for code.wasm. wasmi is pure Rust, no JIT,
# no cranelift - far smaller than wasmtime. Trade-off: slower
# execution, but per-row ETL transforms aren't throughput-critical.
# The wasm module runs in a sandbox - no fs, no network, no env vars.
wasmi = "0.40"
# Pure-Rust JavaScript engine for code.javascript. Boa is an
# interpreter (no JIT), sandboxed by default - no DOM, no fetch, no
# fs. The user supplies a transform(row) -> object function and the
# engine calls it per row, marshalling JSON in / out via the boa
# JsValue<->serde_json bridge.
boa_engine = "0.19"
# Used by xf.ai.pii for regex-based PII detection (emails, phones,
# SSNs, credit cards). Already in our dep graph transitively but
# pinned explicitly here so it's stable across upstream churn.
regex = "1"
# IMAP client for src.email. 3.x alpha is what we need for rustls
# support - the 2.x stable line only supports native-tls (OpenSSL on
# Linux which would break the self-contained build promise). The
# accompanying mail-parser decodes RFC 822 envelopes + MIME bodies.
imap = { version = "=3.0.0-alpha.15", default-features = false, features = ["rustls-tls"] }
mail-parser = "0.11"
rustls-connector = { version = "0.21", default-features = false, features = ["rustls--ring"] }
# SMTP client for snk.email. Pure Rust with rustls-tls. Symmetric
# to src.email (the IMAP reader). Builder + smtp-transport features;
# default native-tls disabled so we don't drag OpenSSL on Linux.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

[features]
default = ["oracle"]
oracle = ["dep:oracle"]

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
# Re-imported as a dev-dep so the integration tests can call its
# Writer to build a small .avro file inline before reading it back
# through src.avro. Same version as the lib dep above.
apache-avro = "0.17"
# Re-imported so src.clipboard tests can write a known payload to the
# system clipboard before running the pipeline. Same backend as the
# lib dep -> writer and reader agree on the OS clipboard format.
arboard = { version = "3", default-features = false }
# Used by code.wasm tests to compile inline WAT (WebAssembly text
# format) to bytes so we don't have to ship a pre-compiled .wasm
# fixture in the repo.
wat = "1"
