[package]
name = "duckle-plugin-sdk"
description = "Public Rust SDK for building Duckle connectors, transforms, and engines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
