[package]
name = "duckle-scheduler"
description = "Time- and event-driven pipeline scheduling for Duckle."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
notify = "8"
notify-debouncer-mini = "0.7"
duckle-duckdb-engine = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio = { workspace = true, features = ["macros", "rt"] }
