[package]
name = "duckle-stream-engine"
description = "Streaming and incremental execution for Duckle pipelines."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
