[package]
name = "duckle-transform-engine"
description = "Native vectorized transforms (filter, project, join, aggregate, ...) operating on Arrow record batches."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
